syntax = "proto3";

package dispatch_echo.v1;

service DispatchEchoService {
    rpc Echo(EchoRequest) returns (EchoResponse);
}

message EchoRequest {
    string message = 1;
    string peer_id = 2;
}

message EchoResponse {
    string message = 1;
    string peer_id = 2;
}